Closed
Bug 1236746
Opened 10 years ago
Closed 10 years ago
Let FFmpeg manage its own memory allocation
Categories
(Core :: Audio/Video: Playback, defect)
Core
Audio/Video: Playback
Tracking
()
RESOLVED
FIXED
mozilla46
People
(Reporter: jya, Assigned: jya)
References
Details
Attachments
(1 file)
6.51 KB,
patch
|
mozbugz
:
review+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
The FFmpeg PDM override the FFmpeg default memory allocation to use our own. The API to override the memory allocation was deprecated several years ago.
Its unnecessary and when requesting to allocate YUV buffers on Windows XP and Windows 7 when using D3D9. We run out of buffers and causes memory allocation failures which lead to various gfx crashes (see bug 1236167).
Additionally, it's been the cause of various failures when we add new codecs as they all have particularities.
Also, not compatible with libavcodec 56 which has removed that deprecated API.
Assignee | ||
Comment 1•10 years ago
|
||
Additionally, the API to override memory allocation has been deprecated years ago and it completely removed in libavcodec 57.
Attachment #8703920 -
Flags: review?(gsquelart)
Attachment #8703920 -
Flags: review?(gsquelart) → review+
Assignee: nobody → jyavenard
Comment 3•10 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla46
Assignee | ||
Comment 5•10 years ago
|
||
Comment on attachment 8703920 [details] [diff] [review]
Let FFmpeg manages its own memory allocation.
Approval Request Comment
[Feature/regressing bug #]:1236746
[User impact if declined]: crashes when multiple file are opened like 1227723
[Describe test coverage new/current, TreeHerder]: In central for over a month
[Risks and why]: Low
[String/UUID change made/needed]: None
Attachment #8703920 -
Flags: approval-mozilla-beta?
Assignee | ||
Updated•10 years ago
|
status-firefox44:
--- → wontfix
status-firefox45:
--- → affected
Comment 6•10 years ago
|
||
Comment on attachment 8703920 [details] [diff] [review]
Let FFmpeg manages its own memory allocation.
Fix potential crashes, taking it.
Should be in 45 beta 2.
Attachment #8703920 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 7•10 years ago
|
||
bugherder uplift |
You need to log in
before you can comment on or make changes to this bug.
Description
•