Bug 1236746 - Let FFmpeg manages its own memory allocation. r=gerald, a=sylvestre

Additionally, the API to override memory allocation has been deprecated years ago and it completely removed in libavcodec 57.